refactor(extension): Complete rewrite with Obsidian/Gold design system
## Design System (Non-Négociable)
- Fond: #020202 (Obsidian)
- Accent: #E0B976 (Gold)
- Texte: #E5E5E5 (Gris clair)

## Extraction Intelligente
- Mots-clés flexibles pour colonnes (lot/n°/id, tantième/qp/1000, m2/surface, type/nature)
- Détection automatique de l'ordre des colonnes
- Déduplication par ID
- JSON propre et structuré

## Popup UX Simplifié
- Bouton unique "Scanner la Page"
- Affichage du nombre de lots détectés
- Bouton "Copier JSON" (apparaît après scan)

## Icon Generators (4 options)
- generate-icons.sh (ImageMagick)
- generate-icons.js (Node.js + Canvas)
- generate-icons.py (Python + Pillow)
- generate-icons-minimal.sh (Base64, zero deps) ✅ USED

## PNG Icons Generated
- icon-16.png, icon-48.png, icon-128.png
- Minimal black squares ready for Chrome

Closes: #Extension-V2-Obsidian

--- a/extension/popup.html
+++ b/extension/popup.html
@@ -1,60 +1,47 @@
 <!DOCTYPE html>
 <html lang="fr">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>VALO-SYNDIC Importer</title>
+  <title>VALO-SYNDIC Ghost</title>
   <link rel="stylesheet" href="popup.css">
 </head>
+
 <body>
   <div class="container">
     <!-- Header -->
     <header class="header">
-      <div class="logo">VS</div>
-      <div class="brand">
-        <h1>VALO-SYNDIC</h1>
-        <span class="tagline">Importer</span>
-      </div>
+      <h1>VALO-SYNDIC GHOST</h1>
+      <span class="subtitle">ERP Data Extractor</span>
     </header>
 
-    <!-- Status Section -->
-    <section class="status-section">
-      <div id="status" class="status idle">
-        <span class="status-icon">🔍</span>
-        <span class="status-text">En attente de scan...</span>
-      </div>
-    </section>
+    <!-- Scan Button -->
+    <button id="scanBtn" class="scan-btn">
+      Scanner la Page
+    </button>
 
-    <!-- Actions -->
-    <section class="actions">
-      <button id="scanBtn" class="btn btn-primary">
-        <span class="btn-icon">📋</span>
-        Scanner cette page
+    <!-- Status -->
+    <div id="status" class="status">
+      Ouvrez une page ERP et cliquez sur "Scanner"
+    </div>
+
+    <!-- Results -->
+    <div id="results" class="results">
+      <div id="resultCount" class="result-count">0</div>
+      <div class="result-label">lots détectés</div>
+      <button id="copyBtn" class="copy-btn">
+        📋 Copier JSON
       </button>
-    </section>
+    </div>
 
-    <!-- Results Preview -->
-    <section id="results" class="results hidden">
-      <h3>Lots détectés</h3>
-      <div id="lotsPreview" class="lots-preview">
-        <!-- Dynamically populated -->
-      </div>
-      <div class="results-actions">
-        <button id="exportBtn" class="btn btn-secondary">
-          📤 Copier JSON
-        </button>
-        <button id="sendBtn" class="btn btn-primary">
-          🚀 Envoyer à VALO
-        </button>
-      </div>
-    </section>
-
-    <!-- Help -->
+    <!-- Footer -->
     <footer class="footer">
-      <p>💡 Ouvrez une page ERP (ICS, Thetrawin, Powimo) avec la liste des lots</p>
+      Compatible: ICS • Thetrawin • Powimo • Tables HTML
     </footer>
   </div>
 
   <script src="popup.js"></script>
 </body>
+
 </html>
